kubernetes/namespace.yml
kind: Namespace
apiVersion: v1
metadata: 
  name: easyshop

  labels:
    name: eashyshop
    environment: production
