kubernetes/mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: easyshop

spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
